# MyHarmonyTraining

./: README.md  build-profile.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
BCR/: build-profile.json5  oh-package.json5
BCR/src/main/: module.json5
BCR/src/main/cpp/: BitmapMatUtils.cpp  BitmapMatUtils.h  CMakeLists.txt  VectorMatUtils.cpp  VectorMatUtils.h  cardocr.cpp  cardocr.h  hello.cpp  native-lib.cpp
BCR/src/main/cpp/types/libbcr/: index.d.ts  oh-package.json5
BCR/src/main/ets/bcrability/: BCRAbility.ts
BCR/src/main/ets/pages/: NAPITest.ets  SelectPictureOrFile_TakePhoto.ets
BCR/src/main/ets/utils/: MediaHelper.ts
BCR/src/ohosTest/: module.json5
Common/: index.ets
Common/src/main/: module.json5
MyLibrary/: index.ets  oh-package.json5
MyLibrary/src/main/: module.json5
NativeTest/: oh-package.json5
NativeTest/src/main/: module.json5
NativeTest/src/main/cpp/: CMakeLists.txt  hello.cpp
NativeTest/src/main/ets/nativetestability/: NativeTestAbility.ts
NativeTest/src/main/ets/pages/: Index.ets
NativeTest/src/ohosTest/: module.json5
Picture_File_TakePhoto_Library/: oh-package.json5
Picture_File_TakePhoto_Library/src/main/: module.json5
Picture_File_TakePhoto_Library/src/main/ets/enums/: MediaOption.ts
Picture_File_TakePhoto_Library/src/main/ets/utils/: StringUtils.ts
Picture_File_TakePhoto_Library/src/main/ets/viewmodel/: MediaModel.ts
entry/: oh-package.json5
entry/src/main/: module.json5
entry/src/main/ets/entryability/: EntryAbility.ts
(+120 files in other folders)
